# WebRegionAndAudienceAnalyzer.skill

./: .gitignore  CLAUDE.md  FEATURE_SUMMARY.md  README.md  SMART_CRAWL.md  SMART_CRAWL_COMPLETE.md  UPDATE_PRIORITY.md  UPDATE_SITEMAP.md  UPDATE_SMART_CRAWL.md  UPDATE_SUMMARY.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  test_sitemap.py  test_smart_crawl.py  web-region-audience-analyzer.skill
.github/workflows/: ci.yml
tests/: test_core_functions.py  test_markdown_export.py  test_persona_analysis.py
web-region-audience-analyzer/: SKILL.md
web-region-audience-analyzer/references/: api-reference.md  signal-patterns.md
web-region-audience-analyzer/scripts/: analyze_webpage.py  analyze_webpage.py.backup  analyze_webpage_original.py  export_utils.py  generate_markdown_report.py  generate_user_friendly_report.py
web-region-audience-analyzer/scripts/analyzer/: __init__.py  aggregation.py  ai_analysis.py  cli.py  constants.py  core.py  crawling.py  fetcher.py  html_parsing.py  language.py  persona.py  recommendations.py  scoring.py  signals.py
