[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "web-region-audience-analyzer"
version = "0.1.0"
description = "Multi-signal fusion tool for analyzing web pages to determine geographic region, target audience, and primary language"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["web", "geolocation", "language-detection", "localization", "audience-analysis"]

dependencies = []

[project.optional-dependencies]
recommended = [
    "beautifulsoup4>=4.12.0",
    "langdetect>=1.0.9",
]
dev = [
    "pytest>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "langdetect>=1.0.9",
]

[project.scripts]
analyze-webpage = "analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["web-region-audience-analyzer/scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
